refactor: remove non functional element in block

--- a/src/index.scss
+++ b/src/index.scss
@@ -68,16 +68,16 @@ body {
       color: #fff;
     }
 
-    &:last-of-type {
-      display: inline-flex;
-      align-items: center;
-      flex: 0 0 50px;
-      border-right: 0;
+    // &:last-of-type {
+    //   display: inline-flex;
+    //   align-items: center;
+    //   flex: 0 0 50px;
+    //   border-right: 0;
 
-      svg {
-        width: 16px;
-        height: 16px;
-      }
-    }
+    //   svg {
+    //     width: 16px;
+    //     height: 16px;
+    //   }
+    // }
   }
 }
